Bug 553769: [Doclet] add support for Java9 Doclet API
  stick to Java 8 API for common classes

Change-Id: I407ea428182142b5dac6805374f3725ce9031b5b